syntax = "proto2";

enum KeyEventType {
  PRESS = 0;
  RELEASE = 1;
}